--- a/CSS/style.css
+++ b/CSS/style.css
@@ -111,13 +111,10 @@ a {
 
   margin: 0 27px 214px 27px;
   color: #ffffff;
-
-  /* background-color: #2c7437; */
 }
 
-.main-navigation {
+.main-header .main-navigation {
   display: flex;
-  /* height: 74px; */
   align-items: center;
   margin-top: 1px;
 }
@@ -287,16 +284,14 @@ a {
 }
 
 .main-header .working-time {
-  /* margin-right: 1px; */
-  /* margin-top: 3px; */
+  margin-right: 1px;
+  /* padding-top: 0px; */
 
   display: flex;
   flex-direction: column;
   align-items: end;
   font-size: 14px;
   line-height: 16px;
-
-  /* background-color: #ac1000; */
 }
 
 .working-time li:nth-child(2) {
@@ -307,6 +302,7 @@ a {
 
 /* Спецпредложения */
 .special-offer {
+  position: relative;
   display: flex;
   flex-direction: column;
 
@@ -329,6 +325,43 @@ a {
   align-items: center;
   text-align: center;
   color: #ffffff;
+}
+
+/* Радиокнопки */
+.choise-offer-radio-button {
+  position: absolute;
+  display: flex;
+  gap: 8px;
+  bottom: 0;
+  left: 0;
+
+  margin-left: 27px;
+}
+
+.choise-offer-radio-button label {
+  display: flex;
+}
+
+/* hide radio-button */
+.choise-offer-radio-button [type="radio"] {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+/* image styles */
+[type="radio"] + img {
+  cursor: pointer;
+}
+
+/* checked style */
+[type="radio"]:checked + img {
+  background: url("/IMG/radio-button-on.svg");
+}
+
+/* unchecked style */
+[type="radio"] + img {
+  background: url("/IMG/radio-button-off.svg");
 }
 
 .offer-text p {
