--- a/CSS/style.css
+++ b/CSS/style.css
@@ -109,7 +109,7 @@ a {
   display: flex;
   flex-direction: column;
 
-  margin: 0 27px 214px 27px;
+  margin: 0 27px 215px 27px;
   color: #ffffff;
 }
 
@@ -285,7 +285,7 @@ a {
 
 .main-header .working-time {
   margin-right: 1px;
-  /* padding-top: 0px; */
+  margin-top: -4px;
 
   display: flex;
   flex-direction: column;
@@ -295,7 +295,8 @@ a {
 }
 
 .working-time li:nth-child(2) {
-  padding-top: 3px;
+  margin-top: 4px;
+  margin-right: 1px;
   font-size: 22px;
   line-height: 24px;
 }
@@ -315,8 +316,9 @@ a {
 }
 
 .special-offer .offer-text {
-  padding: 0;
-  margin-top: 60px;
+  /* margin-top: 31px; */
+  margin-right: 3px;
+  margin-bottom: 31px;
 
   font-weight: 700;
   font-size: 60px;
@@ -364,13 +366,8 @@ a {
   background: url("/IMG/radio-button-off.svg");
 }
 
-.offer-text p {
-  margin: 0;
-  padding: 0;
-}
-
 .special-offer button {
-  margin: 31px 0 0 0;
+  /* margin: 31px 0 0 0; */
   padding: 10px 40px;
 
   font-size: 32px;
