--- a/CSS/style.css
+++ b/CSS/style.css
@@ -318,7 +318,7 @@ a {
 .special-offer .offer-text {
   /* margin-top: 31px; */
   margin-right: 3px;
-  margin-bottom: 31px;
+  margin-bottom: 30px;
 
   font-weight: 700;
   font-size: 60px;
@@ -333,8 +333,9 @@ a {
 .choise-offer-radio-button {
   position: absolute;
   display: flex;
+
   gap: 8px;
-  bottom: 0;
+  bottom: 22px;
   left: 0;
 
   margin-left: 27px;
@@ -367,8 +368,7 @@ a {
 }
 
 .special-offer button {
-  /* margin: 31px 0 0 0; */
-  padding: 10px 40px;
+  padding: 9px 40px 11px;
 
   font-size: 32px;
   line-height: 44px;
@@ -379,8 +379,7 @@ a {
 
 /* Баннеры */
 .banners {
-  padding: 0;
-  margin: 0 14px 0;
+  margin: 39px 14px 0;
 
   display: flex;
   justify-content: space-around;
@@ -389,7 +388,7 @@ a {
 
 .banner {
   width: 560px;
-  margin: 41px 13px 0 13px;
+  margin: 0 13px;
   padding: 16px 21px 24px 19px;
 
   display: flex;
@@ -403,7 +402,6 @@ a {
 
 .banner h3 {
   margin: 0;
-  padding: 0;
 
   font-style: normal;
   font-weight: 700;
@@ -414,7 +412,7 @@ a {
 }
 
 .banner .banner-text {
-  margin: 15px 0 0 0;
+  margin: 15px 0 0;
   padding: 0;
 
   font-style: normal;
@@ -477,22 +475,13 @@ a {
 /* Хиты */
 .hits-container {
   margin: 40px 13px 0;
-  padding: 0;
   display: flex;
 }
 
-.hits {
-  margin: 0;
-  padding: 0;
-
+.hits-container .hits {
   display: flex;
   align-items: center;
   text-align: center;
-}
-
-.hits li {
-  margin: 0;
-  padding: 0;
 }
 
 .hits a {
@@ -502,39 +491,23 @@ a {
   text-decoration: underline;
 }
 
-.hits li {
-  margin: 0;
-  padding: 0;
-}
-
-.hit-icon {
-  margin: 0;
-  padding: 0;
-  position: absolute;
-}
-
-.hit-photo {
-  padding: 0;
-  margin: 0;
-}
-
-.hit-item {
-  margin: 0 13px 0 13px;
-  padding: 0;
-
+.hits .hit-item {
+  margin: 0 13px;
   display: flex;
   flex-direction: column;
+}
+
+.hit-item .hit-icon {
+  position: absolute;
 }
 
 .hit-item .price {
   position: relative;
   bottom: 44px;
   margin: 0;
-  padding: 0;
-
   display: flex;
-  text-align: left;
 
+  text-align: left;
   font-style: normal;
   font-weight: 700;
   font-size: 45px;
@@ -545,7 +518,6 @@ a {
 
 .price .rub {
   margin-left: 4px;
-  padding: 0;
 
   font-style: normal;
   font-weight: 700;
@@ -557,7 +529,6 @@ a {
 
 .price .unit-monetary {
   margin-top: 5px;
-  padding: 0;
 
   font-style: normal;
   font-weight: 700;
@@ -568,8 +539,6 @@ a {
 }
 
 .hit-item .ice-cream-name {
-  margin: 0;
-  padding: 0;
   position: relative;
   bottom: 6px;
 
