Added modal login window

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -947,22 +947,24 @@ a {
 
 /* Всплывающее окно входа */
 .modal {
-  color: #000000;
   position: fixed;
+  /* background-position: 0 0; */
 
   background: #f8f7f4;
   box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.4);
-  background-position: 0 0;
-  box-shadow: 0px 20px 20px rgba(0, 0, 0, 0.4);
+  color: #323232;
 }
 
 .modal-login {
   top: 59px;
   left: 50%;
-
   margin-left: -139px;
 
   display: none;
+}
+
+.modal-show {
+  display: block;
 }
 
 .modal-login a {
