Updated modal login window

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -945,7 +945,6 @@ a {
 
 /* Hidden */
 
-/* Всплывающее окно входа */
 .modal {
   position: fixed;
   /* background-position: 0 0; */
@@ -955,44 +954,42 @@ a {
   color: #323232;
 }
 
+/* Всплывающее окно входа */
 .modal-login {
   top: 59px;
   left: 50%;
   margin-left: -139px;
 
-  display: none;
+  border-radius: 5px;
+  /* display: none; */
 }
 
 .modal-show {
   display: block;
 }
 
-.modal-login a {
-  color: inherit;
-}
-
-.login-form {
+.modal-login .login-form {
+  /* width: 280px; */
   padding: 0;
+  margin: 20px 17px 20px 19px;
   display: flex;
   flex-direction: column;
-  flex-wrap: wrap;
+  gap: 20px;
+
   align-items: left;
-  margin: 20px 18px;
 }
 
-/* Добавить скругления! */
-.login,
-.password {
+.login-form .login,
+.login-form .password {
   /* padding: 9px 15px; */
-  padding: 0;
-  box-sizing: border-box;
+  /* padding: 0; */
+  /* box-sizing: border-box; */
   background: #ffffff;
-  border: 1px solid #d3d3d2;
-  width: auto;
+  /* border: 1px solid #d3d3d2; */
+  /* width: auto; */
 }
 
-/* Отступ курсора не совпадает с отступом placeholder! */
-.login input[type="email"],
+/* .login input[type="email"],
 .password input[type="password"],
 .login input::placeholder,
 .password input::placeholder {
@@ -1000,32 +997,45 @@ a {
   width: 100%;
   padding: 9px 15px;
   height: 47px;
+} */
 
-  font-style: normal;
+.login input,
+.password input {
+  padding: 9px 11px 9px 12px;
+  box-sizing: border-box;
+
+  width: 100%;
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
   color: #999999;
+  border-radius: 5px;
+  border: 1px solid #D3D3D2;
 }
 
-.button-sign-in {
-  padding: 11px 24px 13px 25px;
+.login-form .sign-in-container {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 19px;
+}
 
-  font-family: "Roboto";
-  font-style: normal;
+.sign-in-container .button-sign-in {
+  padding: 10px 25px 10px 26px;
+
   font-weight: 700;
   font-size: 18px;
   line-height: 24px;
   align-items: center;
   color: #fefefe;
+  border-radius: 40px;
 
   background: linear-gradient(0deg, #e74a35 0%, #f26843 100%), #e84d37;
   box-shadow: 0px 1px 2px #ac1000;
 }
 
-.restore,
-.registration {
-  font-style: normal;
+.registration-container .restore,
+.registration-container .registration {
   font-weight: 400;
   font-size: 13px;
   line-height: 16px;
@@ -1034,14 +1044,6 @@ a {
   text-decoration: underline;
 }
 
-.sign-in-container {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.restore {
-}
-
-.registration {
+.registration-container .restore {
+  /* margin-bottom: 8px; */
 }
