--- a/CSS/style.css
+++ b/CSS/style.css
@@ -956,12 +956,12 @@ a {
 
 /* Всплывающее окно входа */
 .modal-login {
-  top: 59px;
+  top: 58px;
   left: 50%;
   margin-left: -139px;
 
   border-radius: 5px;
-  /* display: none; */
+display: none;
 }
 
 .modal-show {
@@ -970,8 +970,8 @@ a {
 
 .modal-login .login-form {
   /* width: 280px; */
-  padding: 0;
-  margin: 20px 17px 20px 19px;
+  /* margin: 20px 17px 20px 19px; */
+  margin: 20px 17px 21px 19px;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -981,30 +981,15 @@ a {
 
 .login-form .login,
 .login-form .password {
-  /* padding: 9px 15px; */
-  /* padding: 0; */
-  /* box-sizing: border-box; */
   background: #ffffff;
-  /* border: 1px solid #d3d3d2; */
-  /* width: auto; */
 }
 
-/* .login input[type="email"],
-.password input[type="password"],
-.login input::placeholder,
-.password input::placeholder {
-  box-sizing: border-box;
-  width: 100%;
-  padding: 9px 15px;
-  height: 47px;
-} */
 
 .login input,
 .password input {
-  padding: 9px 11px 9px 12px;
   box-sizing: border-box;
-
-  width: 100%;
+  padding: 9px 14px;
+  width: 239px;
   font-weight: 400;
   font-size: 14px;
   line-height: 24px;
@@ -1017,7 +1002,7 @@ a {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  gap: 19px;
+  gap: 16px;
 }
 
 .sign-in-container .button-sign-in {
@@ -1032,6 +1017,11 @@ a {
 
   background: linear-gradient(0deg, #e74a35 0%, #f26843 100%), #e84d37;
   box-shadow: 0px 1px 2px #ac1000;
+}
+
+.sign-in-container .registration-container{
+/* display: flex;
+flex-direction: column; */
 }
 
 .registration-container .restore,
