Made modal main menu

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1037,24 +1037,23 @@ a:active {
 
 /* Меню каталога */
 .modal-catalog-menu {
-  padding: 11px 21px;
-  top: 59px;
-  /* right: 17%; */
-  /* margin-right: 5px; */
+  padding: 11px 9px 8px 6px;
+  top: 60px;
+  left: 20%;
+  margin-left: 11px;
 
   border-radius: 5px;
-  /* display: none; */
 }
 
-.new-products{
+.new-products {
   display: flex;
-flex-direction: column;
-/* justify-items: center; */
-/* align-content: center; */
+  flex-direction: column;
+  gap: 3px;
 }
 
 .new-products li {
   height: 28px;
+  padding-left: 14px;
 
   font-weight: 400;
   font-size: 14px;
@@ -1066,13 +1065,24 @@ flex-direction: column;
   font-weight: 700;
   line-height: 16px;
   align-items: center;
+  margin-bottom: -5px;
 }
 
 .new-products li:nth-child(2) {
   height: 1px;
+  width: 114px;
   background: rgba(0, 0, 0, 0.0001);
   opacity: 0.2;
   border-bottom: solid 1px;
+}
+/* Сделать новинки и разделитель другими элементами! */
+.new-products li:hover,
+.new-products li:focus{
+  background: #FBDED7;
+}
+
+.new-products li:active{
+background: #F6B5A5;
 }
 
 /* Окно поиска */
