--- a/CSS/style.css
+++ b/CSS/style.css
@@ -67,16 +67,13 @@ input {
   font-size: 16px;
 }
 
-input:hover {
+input:hover,
+input:focus {
   border: 2px solid rgba(154, 154, 154, 0.52);
 }
 
-input:focus {
-  border: 2px solid rgba(46, 136, 228, 0.52);
-}
-
 input:active {
-  border: 1px solid rgba(178, 178, 178, 0.52);
+  border: 2px solid rgba(46, 136, 228, 0.52);
 }
 
 button {
@@ -162,6 +159,7 @@ a:active {
 }
 
 .menu-container {
+  height: 32px;
   display: flex;
   width: 100%;
   justify-content: space-between;
@@ -181,7 +179,8 @@ a:active {
 }
 
 .site-navigation button {
-  padding: 9px 14px 9px 14px;
+  /* padding: 9px 14px; */
+  padding: 7px 14px;
   margin: 0;
   font-weight: 700;
   font-size: 16px;
@@ -197,7 +196,8 @@ a:active {
 }
 
 .site-navigation a {
-  padding: 8px 14px 9px 14px;
+  /* padding: 8px 14px 9px 14px; */
+  padding: 7px 14px 8px;
   margin: 0;
 
   border-radius: 40px;
@@ -496,23 +496,24 @@ a:active {
 
 /* Хиты */
 
-.hits {
+.hits, .tastes-creamy {
   margin: 40px 27px 0;
 
   display: flex;
   justify-content: space-between;
   gap: 26px;
-
-  align-items: center;
+  flex-wrap: wrap;
   text-align: center;
 }
 
-.hit-item {
+.hit-item, .tastes-item {
+  width: 267px;
+  height: 329px;
   display: flex;
   flex-direction: column;
 }
 
-.hit-icon {
+.hit-icon, .taste-icon {
   position: absolute;
 }
 
@@ -938,7 +939,7 @@ a:active {
 }
 
 /* Hidden */
-
+/* У всех модальных окон при смене размера экрана съезжает позиционирование!!! */
 .modal {
   position: fixed;
 
@@ -1026,13 +1027,12 @@ a:active {
   top: 3px;
 }
 
-/* Текст при выделении исправить(сливается) */
 /* Меню каталога */
 .modal-catalog-menu {
   padding: 11px 9px 8px 6px;
   top: 60px;
-  left: 20%;
-  margin-left: 11px;
+  left: 27%;
+  margin-left: 22px;
   border-radius: 5px;
 
   display: none;
@@ -1072,13 +1072,32 @@ a:active {
 }
 
 .new-products li:hover,
-.new-products li:focus {
+.new-products li:focus,
+.creamy-ice-cream__button:hover,
+.creamy-ice-cream__button:focus {
   background: #fbded7;
+  color: #323232;
 }
 
-.new-products li:active {
+.new-products li:active,
+.creamy-ice-cream__button:active {
   background: #f6b5a5;
+  color: #323232;
 }
+
+/* Исправить цвет кнопки при наведении в меню каталога, перебивается стиль */
+.creamy__button,
+.creamy__button > a,
+.creamy__button:hover,
+.creamy__button:focus,
+.creamy__button:active {
+  background: #d07058;
+  color: #ffffff;
+}
+/* 
+.creamy__button:hover,
+.creamy__button:focus,
+.creamy__button:active */
 
 /* Окно поиска */
 .modal-search {
